<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cityEditText"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_width="match_parent"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/city" />

    <Button
        android:id="@+id/getWeather"
        android:layout_gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_weather"
        android:onClick="getWeather"/>
    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>
