<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sun.get</string>
    <string name="city">City</string>
    <string name="get_weather">Get Weather</string>
    <string name="wi_yahoo_0">&#xf056;</string>
    <string name="wi_yahoo_1">&#xf00e;</string>
    <string name="wi_yahoo_2">&#xf073;</string>
    <string name="wi_yahoo_3">&#xf01e;</string>
    <string name="wi_yahoo_4">&#xf01e;</string>
    <string name="wi_yahoo_5">&#xf017;</string>
...
